--- a/app/globals.css
+++ b/app/globals.css
@@ -32,6 +32,12 @@
   }
 }
 
+@layer base {
+  * {
+    @apply border-border;
+  }
+}
+
 ::-webkit-scrollbar {
   width: 6px;
   scrollbar-color: #262626;
